# typed_permissions

./: .gitignore
derive/: Cargo.toml
derive/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
typed_permissions/: Cargo.toml
typed_permissions/src/: lib.rs
