[package]
name = "basic"
version = "0.1.0"
authors = ["Valerian Garleanu <valerian.garleanu@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed_perm_derive = { path = "../../derive" }
type_permissions = { path = "../../typed_permissions" }
